refactor: 调整文本颜色和按钮样式

--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -1,4 +1,22 @@
 /* 内容主体 */
+.video-card-common .ex-up
+.video-card-common .up
+.article-card .r-con .up
+.live-card .up .txt .tag
+.time-line-card .txt .update .published
+.manga-panel .manga-list-box .manga-card .manga-tag
+.international-footer .link-box .link-item.link-c .bili-footer-font
+.international-footer .link-box .link-item.link-c p
+	color var(--c-text) !important
+
+.video-card-reco .info-box .info .title
+.video-card-common .count span
+.live-card .count
+.home-slide .item .title
+.video-card-reco .info-box .info .up
+.video-card-reco .info-box .info .play
+	color var(--c-white) !important
+
 .first-screen
 	margin-top 40px
 
@@ -125,14 +143,12 @@ manga-panel
 .live-card .pic
 	height 130px
 
-.video-card-common .up
-	color var(--c-text)
-
 .exchange-btn .btn
 .time-line .tl-link
 	margin-right 20px
 	width auto
 	border 0
+	background-color transparent !important
 	font-size 0
 
 .exchange-btn .btn:hover
@@ -144,9 +160,6 @@ manga-panel
 .time-line .tl-link .bilifont
 	font-size 30px
 	color var(--c-accent)
-
-.time-line-card .txt .update .published
-	color var(--c-text)
 
 .live-card .up .txt
 	margin-left 20px
