--- a/bilibili-lite/src/home/header.styl
+++ b/bilibili-lite/src/home/header.styl
@@ -3,7 +3,19 @@
 	background-color var(--c-bg-header)
 	backdrop-filter blur(5px)
 
-/* 搜索框 */
+.nav-link-item .link
+.mini-header .nav-user-center .nav-item a
+.mini-header input
+.mini-header .mini-upload
+.international-home .mini-header .nav-user-center .user-con .item .name
+	color var(--c-white) !important
+
+.mini-header .nav-user-center .nav-item a:hover
+.international-home .bili-header-m .nav-search .nav-search-btn:hover
+.international-home .international-header .nav-search .nav-search-btn:hover
+.nav-link .nav-link-ul .nav-link-item .link:hover
+	color var(--c-accent) !important
+
 .international-home .bili-header-m .nav-search-box
 .international-home .international-header .nav-search-box
 	position absolute
@@ -15,14 +27,14 @@
 .international-home .international-header .nav-search
 	margin 0 auto
 	width 520px
-	border-radius 25px
-	overflow hidden
 
 .international-home .bili-header-m .nav-search #nav_searchform
 .international-home .international-header .nav-search #nav_searchform
 	padding 0 60px 0 20px
 	border 0
-	background-color rgba(0, 0, 0, 0.4)
+	border-radius 25px
+	background-color rgba(0, 0, 0, 0.4) !important
+	overflow hidden
 
 .international-home .bili-header-m .nav-search .nav-search-keyword
 .international-home .international-header .nav-search .nav-search-keyword
@@ -30,55 +42,20 @@
 	font-size 16px
 	color var(--c-white)
 
-.international-home .bili-header-m .nav-search .nav-search-keyword::-webkit-input-placeholder
-.international-header .nav-search .nav-search-keyword::-webkit-input-placeholder
-	color #d2d2d2
-
-.international-home .bili-header-m .nav-search .nav-search-keyword::-moz-placeholder
-.international-header .nav-search .nav-search-keyword::-moz-placeholder
-	color #d2d2d2
-
-.international-home .bili-header-m .nav-search .nav-search-keyword:focus
-.international-header .nav-search .nav-search-keyword:focus
-	color var(--c-white)
-
 .international-home .bili-header-m .nav-search .nav-search-submit
 .international-home .international-header .nav-search .nav-search-submit
 	top 0
 	right 20px
 	font-size 24px
-	color var(--c-white)
+	color var(--c-white) !important
 	line-height 50px
 
 .international-home .bili-header-m .nav-search .nav-search-btn
 .international-home .international-header .nav-search .nav-search-btn
 	width 60px
 	height 50px
+	border-radius 0 25px 25px 0
 	background-color rgba(0, 0, 0, 0.6)
-
-.international-home .bili-header-m .nav-search .nav-search-btn:hover
-.international-home .international-header .nav-search .nav-search-btn:hover
-	color var(--c-accent)
-
-.bilibili-search-suggest
-.bilibili-search-history
-	border-color var(--c-border)
-	background-color var(--c-background)
-
-.bilibili-search-suggest .suggest-item.focus
-.bilibili-search-suggest .suggest-item:hover
-.bilibili-search-history .history-item.focus
-.bilibili-search-history .history-item:hover
-	background-color var(--c-hover)
-
-.bilibili-search-suggest .suggest-item a
-.bilibili-search-history .history-item a
-.bilibili-search-suggest .suggest-item a:hover
-.bilibili-search-history .history-item a:hover
-	color var(--c-text)
-
-.bilibili-search-suggest .suggest-item .suggest_high_light
-	color var(--c-accent)
 
 /* 页眉图片 */
 .bili-banner
