--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -1,6 +1,6 @@
 /* 直播播放界面样式 */
+.link-footer-vm
 .link-navbar-ctnr
-.link-navbar
 .rank-list-ctnr
 .live-room-app .app-content .app-body .player-and-aside-area .aside-area .rank-list-section
 .chat-history-panel
@@ -9,39 +9,17 @@
 .live-player-ctnr.minimal
 	background-color var(--c-background) !important
 
+.attention-btn-ctnr .right-part
+	background-color var(--c-hover) !important
+
+.right-action-ctnr
+	background-color transparent !important
+
 .live-room-app .app-content .app-body .player-and-aside-area .left-container .head-info-section
 .live-room-app .app-content .app-body .player-and-aside-area .left-container .gift-control-section
 .live-room-app .app-content .app-body .player-and-aside-area .aside-area
 	border 0
 	background-color var(--c-background)
-
-.chat-input
-.link-navbar .nav-item
-.link-navbar .main-ctnr .nav-logo
-.shortcuts-ctnr
-.video-container .text-area .title
-.size-bar-text
-.shortcuts-ctnr .shortcut-item
-.tc-black
-	color var(--c-title) !important
-
-.tabs .tab-list .item
-.gift-item .label
-.chat-history-panel .chat-history-list .chat-item.danmaku-item
-.tab-candidate
-.room-introduction-scroll-wrapper
-.room-introduction-tags .room-introduction-tag
-.room-introduction-content p
-.room-introduction-content p span
-.tc-slate
-	color var(--c-text) !important
-
-.tabs .tab-list .item.active
-.chat-history-panel .chat-history-list .chat-item.danmaku-item .user-name
-.tab-candidate.active[data-v-0deb4d76]
-.tab-candidate:hover
-.room-introduction-content p span a
-	color var(--c-accent) !important
 
 .room-introduction-tags
 	border-color var(--c-border) !important
@@ -64,7 +42,6 @@
 	height 30px !important
 	background-size 30px !important
 
-.search-bar-ctnr .search-bar
 .chat-input
 	border 1px solid var(--c-border) !important
 	background-color var(--c-background) !important
