--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -1,7 +1,4 @@
 /* 动态 */
-.feed-card .content
-  color var(--c-title) !important
-
 .feed-card .card
   border 0 !important
   background-color var(--c-background)
@@ -10,19 +7,13 @@
 .feed-card .card .card-content
   width auto
 
-.feed-card .card .main-content .user-name a
 .video-container .text-area .title
   color var(--c-title) !important
 
-.tc-slate
-.video-container .text-area .content
-.up-info .up-info-tip
-.tc-black
-  color var(--c-text)
+.video-container .text-area .view-danmaku span
+  color var(--c-text) !important
 
-.feed-card .card .main-content .user-name.big-vip a
-.expand-btn
-.up-info .up-info-name
+.dynamic-link-hover-bg
   color var(--c-accent) !important
 
 .video-container
@@ -38,14 +29,6 @@
   background-color var(--c-hover) !important
   border-top-color var(--c-border) !important
   border-left-color var(--c-border) !important
-
-.video-container .types
-  background-color var(--c-accent) !important
-  color var(--c-white) !important
-
-.up-info .up-focus-btn
-  border-color var(--c-border) !important
-  color var(--c-text) !important
 
 .card .more-panel
   border-color var(--c-border) !important
