--- a/bilibili-lite/src/public/index.styl
+++ b/bilibili-lite/src/public/index.styl
@@ -3,6 +3,8 @@
   /*![[defaultTheme]]*/
   @import 'base'
   @import 'none'
+  @import 'button'
+  @import 'background'
   @import 'header'
   @import 'comment'
   @import 'feed'
