--- a/bilibili-lite/src/read/info.styl
+++ b/bilibili-lite/src/read/info.styl
@@ -8,30 +8,15 @@
   display none !important
 
 .up-info-holder .fixed-box .up-info-block .up-info-right-block .up-name
-.title-container .title
-  color var(--c-title)
+  color var(--c-title) !important
 
 .up-info-holder .fixed-box .up-info-block .up-info-right-block .row-2
-.up-info-holder .fixed-box .up-info-block .up-info-right-block .fans-num
-.up-info-holder .fixed-box .up-info-block .up-info-right-block .view-num
 .title-container .info span
-.article-holder
-.authority
-.original
-.article-action
-  color var(--c-text)
-
-.article-action .ops i:hover
-  color var(--c-accent)
+  color var(--c-text) !important
 
 .article-action
+.tag-container .tag-item .tag-content
   border-color var(--c-border)
-
-.up-info-holder .fixed-box .follow-btn-holder .follow-btn
-.up-info-holder .fixed-box .follow-btn-holder .follow-btn:hover
-  border-color var(--c-accent)
-  background-color var(--c-accent)
-  color var(--c-white)
 
 .page-container
   padding 0
