--- a/bilibili-lite/src/space/video.styl
+++ b/bilibili-lite/src/space/video.styl
@@ -1,5 +1,6 @@
 /* 投稿视频 */
 #page-channel-index .channel-option.no-channel
+#page-fav .fav-main .fav-action-bottom .fav-action-fixtop
   background-color var(--c-background)
 
 .contribution-sidenav .contribution-item.cur
@@ -11,71 +12,25 @@
 #page-follows .follow-main .follow-action-bottom .follow-action-fixtop
   background-color var(--c-hover)
 
-.contribution-sidenav .contribution-item.cur .num
-.contribution-sidenav .contribution-item.cur .text
 .breadcrumb .item.cur
-.be-pager-options-elevator input
-#page-channel-index .channel-item .channel-name
+#page-fav .fav-sidenav .nav-title .text
 #page-fav .fav-sidenav .favlist-title
 #page-fav .fav-sidenav .watch-later
-.favInfo-box .favInfo-details .fav-name
-#page-fav .fav-sidenav .fav-item.cur .be-dropdown-trigger .icon-ic_more
-#page-fav .fav-sidenav .fav-item.cur .iconfont
-#page-fav .fav-sidenav .fav-item.cur .num
-#page-fav .fav-sidenav .fav-item.cur .text
-#page-fav .fav-main .filter-item
-#page-fav .fav-main .filter-item .filter-type .be-dropdown-item span
 .sub-tabs span
-.pgc-space-follow-item .pgc-item-info .pgc-item-title
-.pgc-space-follow-item .bangumi-options .opt-list li
-.bangumi-pagelistbox .custom-right .custom-right-inner.custompage
-  color var(--c-title)
+  color var(--c-title) !important
 
-.v-search-result
-#page-video #submit-video-type-filter a .count
-.list-item .desc
-.list-item .meta
-.be-pager-item a
-.bangumi-pagelistbox .p
-.be-pager-next a
-.be-pager-prev a
-.be-pager-total
-.be-pager-options-elevator
-#page-channel-index .channel-item .channel-update-time
-#page-fav .fav-main .fav-meta
-.favInfo-box .favInfo-details .fav-options .meta
-#page-fav .fav-main .filter-item .filter-type .be-dropdown-item i
-#page-fav .search-empty-hint p
-.be-dropdown-trigger .icon-ic_more
-#page-follows .follow-sidenav .nav-title .text
-#page-follows .follow-sidenav .num
-#page-follows .follow-sidenav .follow-list-container .follow-item.cur .be-dropdown-trigger .icon-ic_more
-#page-follows .follow-sidenav .follow-list-container .follow-item.cur .num
-#page-follows .follow-sidenav .follow-list-container .follow-item.cur .text
-.breadcrumb .batch
-#page-follows .follow-main .follow-action-bottom li
-#page-follows .follow-main .follow-action-bottom .select-counter
-#page-follows .list-item .auth-description
-#page-setting .setting-privacy-item .setting-privacy-name
-.pgc-space-follow-item .pgc-item-info .pgc-item-desc
-.pgc-space-follow-item .pgc-item-info .type-and-area
-.pgc-space-follow-item .pgc-item-info .pgc-item-state
-.pgc-space-follow-item .bangumi-options i.iconfont
-.pgc-space-follow-item .bangumi-options .opt-list li.disabled
-.bangumi-pagelistbox .custom-right .custom-right-inner
-#page-channel-index .channel-option.no-channel p
-  color var(--c-text)
+.sub-tabs a
+.pgc-space-follow-item .pgc-item-info .type-and-area span
+.pgc-space-follow-item .pgc-item-info .pgc-item-state span
+  color var(--c-text) !important
 
-.v-search-count
 #page-video #submit-video-type-filter a.active
-#page-follows .follow-main .follow-action-bottom .select-cancel
 .sub-tabs a.active
 #page-channel-index .no-channel-container em
-  color var(--c-accent)
+  color var(--c-accent) !important
 
-.be-pager-item-active:hover a
 .be-pager-item-active a
-  color var(--c-white)
+  color: var(--c-white) !important
 
 .list-item
 #page-follows .follow-sidenav .nav-container.follow-container
@@ -84,6 +39,9 @@
 #page-setting .setting-index-module
 #page-fav .fav-sidenav .nav-container
 #page-fav .fav-sidenav .watch-later
+#page-fav .fav-main .fav-action-top
+#page-fav .fav-main .fav-action-top .back-to-info
+.be-dropdown-item.be-dropdown-item-delimiter
   border-color var(--c-border)
 
 .contribution-sidenav
@@ -105,26 +63,11 @@
   box-shadow none
   background-color var(--c-background)
 
-.be-pager-item
-.bangumi-pagelistbox .p
-.be-pager-next
-.be-pager-prev
-.be-pager-options-elevator input
 #page-follows .follow-sidenav .follow-list-container .follow-item.cur
 #page-follows .follow-sidenav .follow-list-container .follow-item:hover
 #page-setting .setting-tag-list a
-.bangumi-pagelistbox .custom-right .custom-right-inner.custompage
   border-color var(--c-border)
   background-color var(--c-hover)
-
-.be-pager-item-active
-.bangumi-pagelistbox .p:hover
-.bangumi-pagelistbox .p.active
-.favInfo-box .favInfo-details .fav-options .fav-play
-#page-channel-index .channel-option.no-channel .create-channel
-  border-color var(--c-accent)
-  background-color var(--c-accent)
-  color var(--c-white)
 
 #page-follows .follow-main .follow-action-top .back-to-info
   border-color var(--c-border)
@@ -136,6 +79,7 @@
 
 /* 收藏 */
 #page-fav .fav-main .filter-item .filter-type
+  padding: 0
   width auto
 
 #page-fav .fav-main .filter-item .filter-type .be-dropdown-item
@@ -147,7 +91,7 @@
   border var(--c-accent)
   background-color var(--c-accent)
   background-image none
-  color var(--c-white)
+  color var(--c-white) !important
 
 #page-subs .mini-item
   margin-right 0px !important
