--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -29,6 +29,7 @@
 .card-video-wrapper .card-video-content .huge-recom
 .video-list-recom .cinema-recom
 .video-list-video .video-item-biref:nth-child(n+6)
+.bili-tab .bili-tab-item.on:before
 	display none !important
 
 .spread-module .num
@@ -41,42 +42,26 @@
 .timeline-box .timeline-item.new p.num a
 	background-color var(--c-accent)
 
-.sub-nav-m ul li a
-.video-floor-m .zone-title .headline .name
-.spread-module .t
-.primary-menu .nav-menu>li .nav-name
-.primary-menu .nav-menu .sub-nav li>a
-.primary-menu .nav-menu .side-nav .side-link span
-.audio-comers-module .zone-title .headline .name
-.audio-list .song-list .song-li .content .text a
-.game-groom-m a .title
-.block-area .timeline-title .headline .name
-.bangumi-home-crumb .fcname ul.n_num li a
-.block-area .block-left .block-header .block-title
-.new-stat-module .zone-title .headline .name
-.timeline-box .timeline-item .item-right a
 .video-item-biref .biref-info .biref-title
-.cinema-home-crumb ul li a
-.block-left .headline h4
-.coming-soon-wrapper .block-title
-.coming-soon-wrapper .card-wrapper .card-item .info-wrapper .desc
-.coming-soon-wrapper .card-wrapper .card-item .info-wrapper .title
-.block-left.block-brand .headline h4
-	color var(--c-title)
+.energy-m .headline .name
+	color var(--c-title) !important
 
-.spread-module .num
-.audio-list .song-list .song-li .content .num
-.game-groom-m .num
-.timeline-box .timeline-item .item-right p.num
-.coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper .date
-.coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper .time
-	color var(--c-text)
+.bangumi-home-crumb .fcname ul.n_num li a
+.spread-module .num span
+.sub-nav-m ul li a
+	color var(--c-text) !important
 
-.primary-menu .nav-menu .channel.on .nav-name
 .bangumi-home-crumb .fcname ul.n_num li.on a
-.cinema-home-crumb ul li.on a
-.cinema-home-crumb ul li:hover a
 	color var(--c-accent)
+
+.sub-nav-m ul li.on a
+	color: var(--c-accent) !important
+
+.carousel-module .panel .title a
+.groom-module .card-mark .title
+.groom-module .card-mark .author
+.groom-module .card-mark .play
+	color: var(--c-white) !important
 
 .primary-menu.border-b
 .cinema-home-crumb ul li
@@ -107,7 +92,7 @@
 
 .bili-tab .bili-tab-item.on
 	border-color var(--c-accent)
-	color var(--c-accent)
+	color var(--c-accent) !important
 
 .video-floor-m .zone-title .headline .read-push
 .audio-comers-module .zone-title .headline .read-push
@@ -119,8 +104,6 @@
 	font-size 0
 
 .go-top-m .go-top
-	border-color var(--c-accent)
-	background-color var(--c-accent)
 	background-position -714px -72px
 
 .energy-m .storey-box
