--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -8,133 +8,57 @@
 .main-container .media-info .media-right .media-tool-bar .btn-rating:hover
 .short-review-masker .short-review-content
 .main-container .pay-bar .vip .btn-pay
-	background-color var(--c-background)
+.bilibili-player-video-sendbar .bilibili-player-video-inputbar
+.members-info__header
+	background-color var(--c-background) !important
 
-.video-info .video-title
-.bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-danmaku-input
+.multi-page .cur-list .list-box li.on
+.multi-page .cur-list .list-box li:hover
+.main-container .review-module .review-list .review-item .review-body
+.ep-list-wrapper .ep-item:hover
+.section-ep-wrapper .ep-item:hover
+.ep-list-wrapper .ep-item.cursor
+.section-ep-wrapper .ep-item.cursor
+.bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint
+	background-color var(--c-hover)
+
+.main-container .media-info .media-right .pub-wrapper .up-info-wrapper .split-line
+	background-color var(--c-border)
+
+.bui-slider .bui-track .bui-bar-wrap .bui-bar
+	background-color var(--c-accent)
+
+.bilibili-player-video-wrap a
+.bilibili-player-video-wrap div
+.bilibili-player-video-wrap li
+.bilibili-player-video-wrap span
+.bilibili-player-video-wrap span:hover
+.player-tooltips div
+	color: var(--c-white) !important
+
+.video-info .video-title .tit
 .collection-m .title
-.collection-m .content .group-list li
 .coin-operated-m .coin-title
-.tag-info-pane .tag-header .tag-title
-.tag-info-pane .tag-header .tag-title a
-.tag-report-popup h3
-.recommend-list .rec-title
-.up-info .u-info .name .username
-.user-card-m .info .user .name
-.multi-page .head-con h3
-.multi-page .cur-list .list-box li a
-.main-container .media-info .media-right .media-title
-.up-info>a .up-name
-.main-container .review-module .module-title
-.main-container .review-module .review-list .review-item .review-title
-.main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-title
-.open-dialog-masker .open-dialog-content .__dialog-header p
-.open-dialog-masker .open-dialog-content .open-body p
-.main-container .media-info .media-right .media-tool-bar .bangumi-options .opt-list li
-.review-edit-header .review-edit-media-info h4
-.main-container .ep-list-wrapper .list-title h4
-.ep-section-module .section-title
-	color var(--c-title)
-
-.video-info .video-data
-.bilibili-player-video-info
-.bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint a
-.video-toolbar .ops>span
-.video-toolbar .ops .share .share-pos .box-a .share-down .share-btn
-.video-toolbar .ops .share .share-pos .share-address .t
-.collection-m .content .group-list li label .count
-.collection-m .content .group-list .add-group .add-btn
-.coin-operated-m .like-checkbox
-.coin-operated-m .coin-bottom .tips
-.video-toolbar .appeal-text
-.video-toolbar .more
-.video-desc .info
-.s_tag .tag-area>li>a
-.tag-del-popup p
-.up-info .u-info .name .message
-.up-info .u-info .desc
-.video-page-card .card-box .info .count
-.user-card-m .info .social a
-.user-card-m .info .sign
-.multi-page .head-con .range-box i
-.multi-page .head-con .range-box .cur-page
 .video-desc .btn span
-.main-container .tool-bar .coin-info i
-.main-container .tool-bar .coin-info span
-.main-container .tool-bar .share-info i
-.main-container .tool-bar .share-info span
-.main-container .tool-bar .mobile-info i
-.main-container .tool-bar .mobile-info span
-.main-container .media-info .media-right .media-count
-.main-container .media-info .media-right .pub-wrapper .home-link
-.main-container .media-info .media-right .pub-wrapper
-.main-container .media-info .media-right .pub-wrapper .av-link
-.up-info .btn-follow-up
-.main-container .media-info .media-right .media-desc
-.main-container .media-info .media-right .media-rating p
-.main-container .review-module .module-title .more-link
-.main-container .review-module .review-list .review-item .review-header .review-author
+	color var(--c-title) !important
+
+.bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint a span
 .main-container .review-module .review-list .review-item .review-content
 .main-container .review-module .review-list .review-item .pub-time
-.main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-count
-.main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-uper
-.main-container .media-info .media-right .media-tool-bar .btn-rating .star-wrapper li i
-.open-dialog-masker .open-dialog-content .open-body ul li span
-.open-dialog-masker .open-dialog-content .open-footer .open-agree
-.main-container .media-info .media-right .media-tool-bar .bangumi-options .opt-list li.disabled
-.short-review-masker .short-review-content .dialog-close
-.review-edit-header .review-edit-media-info .rate-tip
 ul.rate-star li i
-.short-review-masker .short-review-content .mr-long-review
-.main-container .ep-list-wrapper .list-title .mode-change
-.main-container .ep-list-wrapper .list-title .ep-list-progress
-.ep-list-wrapper .ep-item
-.section-ep-wrapper .ep-item
-.ep-list-wrapper .ep-item.visited
-.ep-list-wrapper .ep-item:visited
-.section-ep-wrapper .ep-item.visited
-.section-ep-wrapper .ep-item:visited
-.ep-list-wrapper .ep-item i
-.section-ep-wrapper .ep-item i
-	color var(--c-text)
+.video-toolbar .ops>span i
+.video-desc .info
+.video-toolbar .appeal-text
+	color var(--c-text) !important
+
+.coin-operated-m .coin-title span
+.coin-operated-m .mc-box.on .c-num
+.main-container .review-module .review-list .review-item .review-header .review-star li i.icon-star-full
+ul.rate-star li i.icon-star-full
+	color var(--c-accent) !important
 
 .bilibili-player
 	box-shadow none
-
-.up-info .btn-panel .following-charge-btn
-.up-info .btn-panel .following-charge-btn:hover
-.bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-electric
-.bui-button.bui-button-blue
-.bui-button.bui-button-blue:hover
-.bui-button.bui-button-gray3:hover
-.video-toolbar .ops .share .share-pos .share-address ul li .btn
-.collection-m .bottom .btn
-.tag-info-pane .tag-footer .btn-left-box>a
-.tag-info-pane .tag-footer .btn-left-box>a:hover
-.tag-del-popup .btn-ok
-.tag-report-popup .btn-ok
-.recommend-list .rec-footer
-.video-info .video-title .activity
-.multi-page .cur-list .module-box li.on
-.main-container .recom-wrapper .expand-more
-.float-nav .nav-menu .backup
-.float-nav .nav-menu .item:hover
-.main-container .nav-tools .tool-item
-.main-container .nav-tools .tool-item:hover
-.open-dialog-masker .open-dialog-content .open-footer .btn-normal.confirm
-.open-dialog-masker .open-dialog-content .open-footer .btn-normal.confirm:hover
-.open-dialog-masker .open-dialog-content .open-footer .btn-normal
-.open-dialog-masker .open-dialog-content .open-footer .btn-normal:hover
-.main-container .media-info .media-right .media-tool-bar .btn-follow
-.main-container .media-info .media-right .media-tool-bar .btn-follow:hover
-.main-container .media-info .media-right .media-tool-bar .btn-follow.active
-.short-review-masker .short-review-content .review-body-wrap .mr-btn.active
-.short-review-masker .short-review-content .review-body-wrap .mr-btn.active:hover
-.ep-list-wrapper .ep-item .badge.pink
-.section-ep-wrapper .ep-item .badge.pink
-	border-color var(--c-accent)
-	background-color var(--c-accent) !important
-	color var(--c-white)
 
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active .bp-svgicon
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active:hover .bp-svgicon
@@ -145,28 +69,12 @@ ul.rate-star li i
 .tag-del-popup
 .tag-report-popup
 .multi-page
-.player-auxiliary-area .player-auxiliary-filter .player-auxiliary-setting-menu-wrap
 .multi-page .cur-list .module-box li
 .main-container .media-info .media-right .media-tool-bar .bangumi-options .opt-list
 .main-container .ep-list-wrapper
 .ep-section-module
 	border 1px solid var(--c-border)
 	background-color var(--c-background)
-
-.bui-slider .bui-track .bui-bar-wrap .bui-bar
-	background-color var(--c-accent)
-
-.bilibili-player-video-sendbar .bilibili-player-video-inputbar
-	background-color var(--c-background)
-
-.multi-page .cur-list .list-box li.on
-.multi-page .cur-list .list-box li:hover
-.main-container .review-module .review-list .review-item .review-body
-.ep-list-wrapper .ep-item:hover
-.section-ep-wrapper .ep-item:hover
-.ep-list-wrapper .ep-item.cursor
-.section-ep-wrapper .ep-item.cursor
-	background-color var(--c-hover)
 
 .collection-m .title
 .collection-m .content .group-list .add-group .add-btn
@@ -179,35 +87,9 @@ ul.rate-star li i
 .main-container .review-module
 .main-container .plp-l .comment-wrapper
 .open-dialog-masker .open-dialog-content .__dialog-header
+.video-toolbar .ops .share .share-pos .box-b
+.bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-inputbar-wrap
 	border-color var(--c-border)
-
-.video-toolbar .ops>span.on
-.video-toolbar .ops>span.on i
-.video-toolbar .ops>span:hover
-.video-toolbar .ops>span:hover i
-.coin-operated-m .coin-title span
-.coin-operated-m .mc-box.on .c-num
-.tag-info-pane .tag-header .tag-title a:hover
-.tag-info-pane .btn-right-box .tag-praise
-.bili-header-m .bilibili-suggest .suggest-item .suggest_high_light
-.multi-page .cur-list .list-box li.on>a
-.video-desc .btn span:hover
-.up-info>a .up-name.vip
-.main-container .media-info .media-right .media-rating .score
-.main-container .review-module .module-title .more-link:hover
-.main-container .review-module .review-list .review-item .review-header .review-star li i.icon-star-full
-.open-dialog-masker .open-dialog-content .open-footer .open-agree i.icon-chk-full
-.open-dialog-masker .open-dialog-content .open-footer .open-agree a
-ul.rate-star li i.icon-hover
-ul.rate-star li i.icon-star-full
-.review-edit-header .review-edit-media-info .rate-wrap .is-coin
-	color var(--c-accent)
-
-.is-vip
-.up-info .u-info .name .username.is-vip:hover
-.up-info .u-info .name .message:hover
-.up-info .u-info .name .message:hover i
-	color var(--c-accent) !important
 
 .video-toolbar .ops .share .share-pos
 .video-toolbar .ops .share .share-pos .share-address ul li input
@@ -223,59 +105,12 @@ ul.rate-star li i.icon-star-full
 	border 0
 	background-color var(--c-white)
 
-.main-container .media-info .media-right .media-tool-bar .bangumi-options .opt-list li:hover
-	background-color var(--c-hover)
-	color var(--c-title)
-
-.more-ops-list li:hover
-	background-color var(--c-hover)
-	color var(--c-text)
-
-.main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item.visited
-.main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item:visited
-.main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item
-	border-color var(--c-border)
-	background-color var(--c-background)
-	color var(--c-text)
-
-.s_tag .btn-add span
-	background-color var(--c-text)
-
-.s_tag .tag-area>li
-.s_tag .btn-add
-.multi-page .cur-list .module-box li:hover
-.bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-inputbar-wrap
-.main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item:hover
-	border-color var(--c-border)
-	background-color var(--c-hover)
-
 .members-info
-	margin-bottom 20px
+	margin-bottom: 20px;
 	border 1px solid var(--c-border)
 
-.members-info__header
-	background-color var(--c-background) !important
-
 .members-info .up-card
-	padding 0 16px
-
-.members-info .up-card .btn
-	flex-shrink initial !important
-
-.members-info__header .title
-.members-info .up-card .info-name
-	color var(--c-title) !important
-
-.members-info__header .btn
-.members-info .up-card .info-title
-	color var(--c-text) !important
-
-.members-info .up-card .attention--not
-	background-color var(--c-accent) !important
-	color var(--c-white) !important
-
-.main-container .media-info .media-right .pub-wrapper .up-info-wrapper .split-line
-	background-color var(--c-border)
+	padding: 0 10px
 
 .main-container .media-info .media-right .media-tool-bar .btn-rating
 	border 0
@@ -300,3 +135,8 @@ ul.rate-star li i.icon-star-full
 	bottom 10px
 	right 20px
 	color var(--c-text) !important
+
+.video-desc .btn
+.members-info__header .btn
+	background-color: transparent !important
+	color var(--c-title) !important
