--- a/bilibili-lite/src/video/danmaku.styl
+++ b/bilibili-lite/src/video/danmaku.styl
@@ -1,4 +1,7 @@
 /* 弹幕列表 */
+.player-auxiliary-area .player-auxiliary-filter-title
+	color var(--c-title) !important
+
 .bui-collapse .bui-collapse-wrap
 	border 1px solid var(--c-border)
 	border-radius 2px
@@ -6,48 +9,11 @@
 .player-auxiliary-area
 .bui-collapse .bui-collapse-header
 .player-auxiliary-area .player-auxiliary-filter
-.player-auxiliary-area .player-auxiliary-filter .player-auxiliary-setting-menu-wrap .player-auxiliary-setting-menu-list
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-load-status
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-btn-footer
 	background-color var(--c-background)
 
 .player-auxiliary-area .player-auxiliary-danmaku .player-auxiliary-danmaku-function
-	background-color var(--c-hover)
-
-.player-auxiliary-area .player-auxiliary-filter-title
-.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row span.danmaku-info-danmaku
-.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-load-status.disabled
-	color var(--c-title)
-
-.bui-collapse .bui-collapse-header .bui-collapse-arrow
-.player-auxiliary-area .player-auxiliary-filter-menu
-.player-auxiliary-area .player-auxiliary-filter .player-auxiliary-setting-menu-wrap .player-auxiliary-setting-menu-list
-.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row
-	color var(--c-text)
-
-.player-auxiliary-area .player-auxiliary-filter .player-auxiliary-setting-menu-wrap .player-auxiliary-setting-menu-list:hover
-	background-color var(--c-hover)
-	color var(--c-text)
-
-.player-auxiliary-area .player-auxiliary-danmaku .player-auxiliary-danmaku-function [class*=player-auxiliary-danmaku-btn-]
-	background-color var(--c-hover)
-	color var(--c-title)
-
-.bui-button.bui-button-gray2
-	border-top 1px solid var(--c-border)
-	background-color var(--c-background)
-	color var(--c-text)
-
-.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row .danmaku-info-block-btn
-.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row .danmaku-info-protect-btn
-.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row .danmaku-info-report-btn
-.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row .danmaku-info-block-btn:hover
-.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row .danmaku-info-protect-btn:hover
-.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row .danmaku-info-report-btn:hover
-	background-color var(--c-accent)
-	color var(--c-white)
-
-.bui-button.bui-button-gray2:hover
-	background-color var(--c-hover)
-	color var(--c-text)
+.player-auxiliary-area .player-auxiliary-danmaku .player-auxiliary-danmaku-function div
+	background-color var(--c-hover) !important
